--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
             <li><a href="arquivos/RDE02-DW1-Douglas_Gustavo_Ribas.pdf" target="_blank">RDE02-DW1-Douglas_Gustavo_Ribas.pdf</a> </li>
             <li><a href="RDE03-Ex01-Douglas_Gustavo_Ribas.html" target="_blank"> RDE03-Ex01-Douglas_Gustavo_Ribas.html</a></li>
             <li><a href="RDE04-Ex01-Douglas_Gustavo_Ribas.html" target="_blank"> RDE04-Ex01-Douglas_Gustavo_Ribas.html</a></li>
-            <li><a href="RDE05_Douglas_Gustavo_Ribas.html" target="_blank"> RDE05_Douglas_Gustavo_Ribas.htm</a></li>
-            <li><a href="RDE06-Douglas_Gustavo_Ribas.html" target="_blank"> RDE06_Douglas_Gustavo_Ribas.htm</a></li>
+            <li><a href="RDE05_Douglas_Gustavo_Ribas.html" target="_blank"> RDE05_Douglas_Gustavo_Ribas.html</a></li>
+            <li><a href="RDE06-Douglas_Gustavo_Ribas.html" target="_blank"> RDE06_Douglas_Gustavo_Ribas.html</a></li>
+            <li><a href="RDE07_Douglas_Gustavo_Ribas.html" target="_blank"> RDE07_Douglas_Gustavo_Ribas.html</a></li>
             <li><a href="sobre.html" target="_blank">sobre.html</a></li>
             <li><a href="arquivos/RDE05 - Copia.zip" download="arquivos/RDE05 - Copia.zipi" type="application/zip">Download do conteudo"</li>
 
