--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             <li><a href="RDE05_Douglas_Gustavo_Ribas.html" target="_blank"> RDE05_Douglas_Gustavo_Ribas.html</a></li>
             <li><a href="RDE06-Douglas_Gustavo_Ribas.html" target="_blank"> RDE06_Douglas_Gustavo_Ribas.html</a></li>
             <li><a href="RDE07_Douglas_Gustavo_Ribas.html" target="_blank"> RDE07_Douglas_Gustavo_Ribas.html</a></li>
+            <li><a href="RDE08-Douglas_Gustavo_Ribas.html" target="_blank"> RDE08_Douglas_Gustavo_Ribas.html</a></li>
             <li><a href="sobre.html" target="_blank">sobre.html</a></li>
             <li><a href="arquivos/RDE05 - Copia.zip" download="arquivos/RDE05 - Copia.zipi" type="application/zip">Download do conteudo"</li>
 
