--- a/RDE09-Douglas_Gustavo_Ribas.html
+++ b/RDE09-Douglas_Gustavo_Ribas.html
@@ -20,6 +20,30 @@
     <h3>Incorporar videos ao site</h3>
 
     <iframe width="560" height="315" src="https://www.youtube.com/embed/fYJl-7jRzuw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-    
+
+    <h2>Tag video</h2>
+    <p>Descrição</p>
+    <video poster="video/Bike.jpg" controls>
+        <source src="video/_Bike.mp4" type="video/mp4">
+        <source src="video/Bike.webm" type="video/webm">
+        <source src="video/Bike.ogv"  type="video/ogv">
+    </video>
+
+    <h2>Tag de audio</h2>
+    <p>Descrição biblioteca de audio</p>
+    <audio preload="metadata" controls >
+        <source src="audio/Hey Sailor - Letter Box.mp3" type="audio/mp3">
+        <source src="audio/Hey Sailor - Letter Box.ogg" type="audio/ogg">
+        <source src="audio/Hey-Sailor-Letter-Box.wav" type="audio/wav">
+    </audio>
+
+    <h2>Tag picture</h2>
+    <p>Descrição</p>
+    <picture>
+        <source media="(max-width:500px)" srcset="IMG/bike_110.jpg">
+        <soruce media="(max-width:700px)" srcset="IMG/bike_320.jpg">
+        <soruce media="(max-width:1000px)" srcset="IMG/bike_640.jpg">
+        <img src="IMG/bike_full.jpg"  alt="MTb Por-Do-Sol">
+    </picture>    
 </body>
 </html>
