--- a/RDE10-Dougals_Gustavo_Ribas.html
+++ b/RDE10-Dougals_Gustavo_Ribas.html
@@ -25,18 +25,27 @@
     <p>
         Os códigos CSS são definidos dentro de uma tag HTML.
         Afetam somente a tag em que foi definida.
+        <ul>
+            <li><a href="RDE10-CSS_inline.html" target="_blank"> RDE10-CSS_inline.html</a></li>
+        </ul>
     </p>
 
     <h3>Incorporado ou Internal</h3>
     <p>
         Os códigos CSS são definidos no cabeçalho, dentro da tag head.
         Afetam somente o documento em qual foi definido.
+        <ul>
+            <li><a href="RDE10-CSS_Incorporado.html" target="_blank"> RDE10-CSS_Incorporado.html</a></li>
+        </ul>
     </p>
 
     <h3>Externo ou External</h3>
     <p>
         Os código CSS são definidos em um arquivo externo.
         Afetam todos os documentos que estão linkados ao CSS.
+        <ul>
+            <li><a href="RDE10-CSS_external.html" target="_blank"> RDE10-CSS_external.html</a></li>
+        </ul>
     </p>
 
     
