--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             <li><a href="RDE07_Douglas_Gustavo_Ribas.html" target="_blank"> RDE07_Douglas_Gustavo_Ribas.html</a></li>
             <li><a href="RDE08-Douglas_Gustavo_Ribas.html" target="_blank"> RDE08_Douglas_Gustavo_Ribas.html</a></li>
             <li><a href="RDE09-Douglas_Gustavo_Ribas.html" target="_blank"> RDE09_Douglas_Gustavo_Ribas.html</a></li>
+            <li><a href="RDE10-Dougals_Gustavo_Ribas.html" target="_blank"> RDE10-Douglas_Gustavo_Ribas.html</a></li>
             <li><a href="sobre.html" target="_blank">sobre.html</a></li>
             <li><a href="arquivos/RDE05 - Copia.zip" download="arquivos/RDE05 - Copia.zipi" type="application/zip">Download do conteudo"</li>
 
