--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             <li><a href="RDE09-Douglas_Gustavo_Ribas.html" target="_blank"> RDE09_Douglas_Gustavo_Ribas.html</a></li>
             <li><a href="RDE10-Dougals_Gustavo_Ribas.html" target="_blank"> RDE10-Douglas_Gustavo_Ribas.html</a></li>
             <li><a href="https://douglasgustavoribas.github.io/RDE12_Douglas_Gustavo_Ribas/" target="_blank" >RDE12_Douglas_Gustavo_Ribas.html</a></li>
+            <li><a href="https://douglasgustavoribas.github.io/RDE13-Douglas_Gustavo_Ribas/" target="_blank">RDE13_Douglas_Gustavo_Ribas.html</a></li>
             <li><a href="sobre.html" target="_blank">sobre.html</a></li>
             <li><a href="arquivos/RDE05 - Copia.zip" download="arquivos/RDE05 - Copia.zipi" type="application/zip">Download do conteudo"</li>
 
