--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
             <li><a href="https://douglasgustavoribas.github.io/RDE12_Douglas_Gustavo_Ribas/" target="_blank" >RDE12_Douglas_Gustavo_Ribas.html</a></li>
             <li><a href="https://douglasgustavoribas.github.io/RDE13-Douglas_Gustavo_Ribas/" target="_blank">RDE13_Douglas_Gustavo_Ribas.html</a></li>
             <li><a href="https://douglasgustavoribas.github.io/RDE14-Douglas_Gustavo_Ribas/" target="_blank">RDE14_Douglas_Gustavo_Ribas.html</a></li>
+            <li><a href="https://douglasgustavoribas.github.io/RDE15_Douglas_Gustavo_Ribas/" target="_blank">RDE15_Douglas_Gustavo_Ribas.html</a></li>
+            <li><a href="https://douglasgustavoribas.github.io/RDE16_Douglas_Gustavo_RIbas/" target="_blank">RDE16_Douglas_Gustavo_Ribas.html</a></li>
+
             <li><a href="sobre.html" target="_blank">sobre.html</a></li>
             <li><a href="arquivos/RDE05 - Copia.zip" download="arquivos/RDE05 - Copia.zipi" type="application/zip">Download do conteudo"</li>
         </div>
